6. something points woop woop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(labb1)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
-add_executable(labb1 ${SOURCE_FILES})
+add_executable(labb1 ${SOURCE_FILES} hj.cpp hj.h)
